# protobuf_js_cases

./: README.md
case-cpp/: CMakeLists.txt  Makefile  README.md  main.cpp  window.pb.cc  window.pb.h  window.proto
case-go/: Makefile  README.md  go.mod  go.sum  main.go
case-go/message/: gen.sh  window.pb.go  window.proto
case-go/protos/: window.proto
case-go/protos/window/: window.pb.go
case-go2/: Makefile  go.mod  main.go
case-go2/protos/: hello.proto  window.proto
case-go2/protos/hello/: hello.pb.go
case-go2/protos/window/: window.pb.go
case-node/: Makefile  README.md  gen.sh  package-lock.json  package.json  test.js  test2.js
case-node/protocol_buffers/definitions/: window.proto
case-node2/: Makefile  README.md  index.html  index.js  package-lock.json  package.json  test.js  window.proto
case-python/: Makefile  README.md  test.py  test2.py
case-python/protos/: window.proto  window_pb2.py
case-web/: README.md  index.html
case-web/protos/: common.proto
case1/: README.md  package-lock.json  test.js
case1/protocol_buffers/definitions/: window.proto
case2/: index.html
utf8-utf16/: README.md  index.html  window.proto
